--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
 <div class="container"><nav class="header__nav">
-    <a href="#" class="header__logo-link"><img src="images/logo-cropped.svg" alt="UMA" class="header__logo"></a>
+    <a href="#" class="header__logo-link"><img src="../images/logo-cropped.svg" alt="UMA" class="header__logo"></a>
 
 <ul class="header__nav-ul">
   <li class="header__nav-li">
