--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <div class="adventures__card-container">
 <div class="adventures__card">
-    <img class="adventures__card-img" src="../images/indien.jpg" alt="Indien">
+    <img class="adventures__card-img" src="images/indien.jpg" alt="Indien">
     <h4 class="adventures__card-heading">Indien</h4>
     <p class="adventures__card-date">February 11th | <span class="text-primary"> 11 Nights</span></p>
     <a href="#" class="button" >Book Now</a>
