--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
 <div class="container"><nav class="header__nav">
-    <a href="#" class="header__logo-link"><img src="../images/logo-cropped.svg" alt="UMA" class="header__logo"></a>
+    <a href="#" class="header__logo-link"><img src="images/logo-cropped.svg" alt="UMA" class="header__logo"></a>
 
 <ul class="header__nav-ul">
   <li class="header__nav-li">
@@ -33,19 +33,19 @@
 
 <div class="adventures__card-container">
 <div class="adventures__card">
-    <img class="adventures__card-img" src="../images/indien.jpg" alt="Indien">
+    <img class="adventures__card-img" src="images/indien.jpg" alt="Indien">
     <h4 class="adventures__card-heading">Indien</h4>
     <p class="adventures__card-date">February 11th | <span class="text-primary"> 11 Nights</span></p>
     <a href="#" class="button" >Book Now</a>
 </div>
 <div class="adventures__card">
-    <img class="adventures__card-img" src="../images/bootstrand.jpg" alt="Boote">
+    <img class="adventures__card-img" src="images/bootstrand.jpg" alt="Boote">
     <h4 class="adventures__card-heading">Thailand</h4>
     <p class="adventures__card-date">March 11th | <span class="text-primary"> 11 Nights</span></p>
     <a href="#" class="button" >Book Now</a>
 </div>
 <div class="adventures__card">
-    <img class="adventures__card-img" src="../images/ägypten.jpg" alt="ägypten">
+    <img class="adventures__card-img" src="images/ägypten.jpg" alt="ägypten">
     <h4 class="adventures__card-heading">Ägypten</h4>
     <p class="adventures__card-date">April 11th | <span class="text-primary"> 11 Nights</span></p>
     <a href="#" class="button" >Book Now</a>
